payflow-platform-config/overlays/prod/patch-deploy-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payflow-api
spec:
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "4"
              memory: 2Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payflow-worker
spec:
  template:
    spec:
      containers:
        - name: worker
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "4"
              memory: 2Gi
