payflow-platform-config/overlays/prod/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payflow-api
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payflow-worker
spec:
  replicas: 3
